; ModuleID = '/home/carl/AnghaBench/radare2/libr/magic/extr_apprentice.c_get_cond.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/magic/extr_apprentice.c_get_cond.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cond_tbl_s = type { [8 x i8], i64, i32 }

@get_cond.cond_tbl = internal constant [4 x %struct.cond_tbl_s] [%struct.cond_tbl_s { [8 x i8] c"if\00\00\00\00\00\00", i64 2, i32 129 }, %struct.cond_tbl_s { [8 x i8] c"elif\00\00\00\00", i64 4, i32 131 }, %struct.cond_tbl_s { [8 x i8] c"else\00\00\00\00", i64 4, i32 130 }, %struct.cond_tbl_s { [8 x i8] zeroinitializer, i64 0, i32 128 }], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8**)* @get_cond to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_cond(i8* %0, i8** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.cond_tbl_s*, align 8
  store i8* %0, i8** %3, align 8
  store i8** %1, i8*** %4, align 8
  store %struct.cond_tbl_s* getelementptr inbounds ([4 x %struct.cond_tbl_s], [4 x %struct.cond_tbl_s]* @get_cond.cond_tbl, i64 0, i64 0), %struct.cond_tbl_s** %5, align 8
  br label %6

6:                                                ; preds = %43, %2
  %7 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %8 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %46

11:                                               ; preds = %6
  %12 = load i8*, i8** %3, align 8
  %13 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %14 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %13, i32 0, i32 0
  %15 = getelementptr inbounds [8 x i8], [8 x i8]* %14, i64 0, i64 0
  %16 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %17 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = call i64 @strncmp(i8* %12, i8* %15, i64 %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %42

21:                                               ; preds = %11
  %22 = load i8*, i8** %3, align 8
  %23 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %24 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = getelementptr inbounds i8, i8* %22, i64 %25
  %27 = load i8, i8* %26, align 1
  %28 = sext i8 %27 to i32
  %29 = call i64 @isspace(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %42

31:                                               ; preds = %21
  %32 = load i8**, i8*** %4, align 8
  %33 = icmp ne i8** %32, null
  br i1 %33, label %34, label %41

34:                                               ; preds = %31
  %35 = load i8*, i8** %3, align 8
  %36 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %37 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = getelementptr inbounds i8, i8* %35, i64 %38
  %40 = load i8**, i8*** %4, align 8
  store i8* %39, i8** %40, align 8
  br label %41

41:                                               ; preds = %34, %31
  br label %46

42:                                               ; preds = %21, %11
  br label %43

43:                                               ; preds = %42
  %44 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %45 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %44, i32 1
  store %struct.cond_tbl_s* %45, %struct.cond_tbl_s** %5, align 8
  br label %6

46:                                               ; preds = %41, %6
  %47 = load %struct.cond_tbl_s*, %struct.cond_tbl_s** %5, align 8
  %48 = getelementptr inbounds %struct.cond_tbl_s, %struct.cond_tbl_s* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 8
  ret i32 %49
}

declare dso_local i64 @strncmp(i8*, i8*, i64) #1

declare dso_local i64 @isspace(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
